@@ -2,16 +2,16 @@
 .yardoc
 dist/
 pkg/
+spec/fixtures/
 spec/rp_env/
-spec/fixtures/**
-!spec/fixtures/site.pp
-!spec/fixtures/inspec_profiles
-.bundle/
+!/spec/hieradata/default.yaml
+!/spec/fixtures/site.pp
 .rspec_system
 .vagrant/
+.bundle/
 Gemfile.lock
-doc/
-junit/
-log/
-sec_results/
 vendor/
+junit/
+sec_results/
+log/
+doc/
