@@ -1,3 +1,8 @@
+* Wed Dec 11 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.4.0-0
+- Add EL8 support
+- Move the default rules to data in modules
+- Make simp-logrotate, simp-syslog, and simp-auditd optional dependencies
+
 * Wed Aug 14 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.3.1-0
 - With contributions from ischmidt1235 on GitHub
 - Add InSpec compliance tests
